# ES2025

Shb_ws/: error.txt  new_code.cpp  shb.txt
Shb_ws/back/: forward_motion_node.cpp
Shb_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Shb_ws/devel/lib/motion_control/: motion_control_node
Shb_ws/devel/lib/my_robot_control/: obstacle_avoidance_node
Shb_ws/devel/lib/pkgconfig/: motion_control.pc  my_robot_control.pc  point_to_distance.pc  robot_motion.pc
Shb_ws/devel/lib/point_to_distance/: point_to_distance
Shb_ws/devel/lib/robot_motion/: aeb_node  camera_aeb_node  forward_motion_node  new_code
Shb_ws/src/motion_control/: CMakeLists.txt  package.xml
Shb_ws/src/motion_control/src/: motion_control.cpp
Shb_ws/src/my_robot_control/: CMakeLists.txt
Shb_ws/src/my_robot_control/src/: control.cpp
Shb_ws/src/point_to_distance/: CMakeLists.txt
Shb_ws/src/point_to_distance/launch/: point_cloud_to_distance.launch
Shb_ws/src/point_to_distance/src/: point_to_distance.cpp
Shb_ws/src/robot_motion/: CMakeLists.txt
Shb_ws/src/robot_motion/src/: AEB-old.cpp  AEB.cpp  camera.cpp  forward_motion_node.cpp  new_code.cpp
Shb_ws/wheeltec_stop/wheeltec_stop/: CMakeLists.txt  package.xml
Shb_ws/wheeltec_stop/wheeltec_stop/launch/: keyboard_teleop.launch
Shb_ws/wheeltec_stop/wheeltec_stop/scripts/: stop.py
lidar_ws/: lidar_config.rviz
lidar_ws/devel/include/lslidar_msgs/: LslidarPacket.h  (+1 more)
lidar_ws/src/: CMakeLists.txt
source code/aeb_controller/: CMakeLists.txt  package.xml
source code/aeb_controller/launch/: aeb_controller.launch
source code/aeb_controller/scripts/: aeb_controller.py
(+73 files in other folders)
